--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <head>
 </head>
 <body>
-    <h1>Проверь зрение.</h1>
-    <h1>Увидел?(Очень легко)</h1>
-    <h2>Тут?(Легко)</h2>
-    <h3>Видешь?(Нормально)</h3>
-    <h4>Всё ещё тут?(Круто)</h4>
-    <h5>Присмотрелся,да?(Предпоследний)</h5>
-    <h6>Сложно!(Сложно,ты прошёл этот тест!)</h6>
-    <button>Нажми если мужик!</button>
+    <h1>Check your eyes.</h1>
+    <h1>See?(so easy)</h1>
+    <h2>Here?(easy)</h2>
+    <h3>Again see?(Normal)</h3>
+    <h4>Your are here?(good)</h4>
+    <h5>took a closer look, huh?(Penultimate)</h5>
+    <h6>Hard!(Hard,but you passed this test!)</h6>
+    <button>Dont click that!</button>
 </body>
 </html>
