Fix inline style syntax for header color

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Test for eyes!</title>
 </head>
 <body>
-    <h1 style='color=red'>Check your eyes.</h1>
+    <h1 style='color: red;'>Check your eyes.</h1>
     <h1>See?(so easy)</h1>
     <h2>Here?(easy)</h2>
     <h3>Again see?(Normal)</h3>
