Change heading colors and styles in index.html
Updated heading styles and colors for visual clarity.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 </head>
 <body>
     <h1 style='color: red;'>Check your eyes.</h1>
-    <h1>See?(so easy)</h1>
-    <h2>Here?(easy)</h2>
-    <h3>Again see?(Normal)</h3>
-    <h4>Your are here?(good)</h4>
-    <h5>took a closer look, huh?(Penultimate)</h5>
-    <h6>Hard!(Hard,but you passed this test!)</h6>
-    <button>Dont click that!</button>
+    <h1 style='color: orange;'>See?(so easy)</h1>
+    <h2 style='color: yellow;'>Here?(easy)</h2>
+    <h3 style='color: green;'>Again see?(Normal)</h3>
+    <h4 style='color: blue;'>Your are here?(good)</h4>
+    <h5 style='color: indigo ;'>took a closer look, huh?(Penultimate)</h5>
+    <h6 style='color: violet;'>Hard!(Hard,but you passed this test!)</h6>
+    <button'>Dont click that!</button>
 </body>
 </html>
