Fix anchor tag closing in index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h4 style='color: blue;'>Your are here?(good)</h4>
     <h5 style='color: indigo ;'>took a closer look, huh?(Penultimate)</h5>
     <h6 style='color: violet;'>Hard!(Hard,but you passed this test!)</h6>
-    <a href='https://youtube.com' class=class_for_button>Dont click that!</button>
+    <a href='https://youtube.com' class=class_for_button>Dont click that!</a>
 </body>
 </html>
