Remove old headings and add new elements

--- a/index.html
+++ b/index.html
@@ -3,13 +3,9 @@
     <title>Test for eyes!</title>
 </head>
 <body>
-    <h1 style='color: red;'>Check your eyes.</h1>
-    <h1 style='color: orange;'>See?(so easy)</h1>
-    <h2 style='color: yellow;'>Here?(easy)</h2>
-    <h3 style='color: green;'>Again see?(Normal)</h3>
-    <h4 style='color: blue;'>Your are here?(good)</h4>
-    <h5 style='color: indigo ;'>took a closer look, huh?(Penultimate)</h5>
-    <h6 style='color: violet;'>Hard!(Hard,but you passed this test!)</h6>
-    <a href='https://youtube.com' class=class_for_button>Dont click that!</a>
+    <a href='https://www.youtube.com/@%D0%BF%D0%B8%D0%BA%D1%81%D0%B5%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9-0%D0%BD0' class=class_for_button>Click for opening my Youtube Chanell!</a>
+    <div class='firstdiv'></div>
+    <div class='seconddiv'></div>
+    <button class=button>Разноцветная кнопка!</button>
 </body>
 </html>
